# Advantech-AI-Selection-Tool

./: .env.example  .gitignore  CHANGELOG.md  README.md  check_chunks.py  dev_log_sprint1.md  main.py  pyproject.toml
.github/workflows/: deploy-pages.yml
Datasheet/: product_expert.py
Plan/: Feature Selector 整合實作計畫  Master_Project_Plan.md  RAG_Chatbot_實作指南.md  architecture_diagram.md  chatbot_query_routing_design.md  cloudflare_tunnel_setup.md  dev_log_sprint1.md  implementation_plan_mongo_sync.md  pdf_integration_guide.md  project_overview.md  project_plan_v4.md  software_architecture_logic.md
Reference/: app_slct 1.py
app/: database.py  llm_gateway.py  main.py  report_generator.py
app/api/: chat.py  compare.py  report.py  selection.py
app/models/: chat.py  selection.py
app/rag/: compare_summary.py  datasheet_expert.py  hard_filter.py  intent_parser.py  model_detector.py  report_generator.py  vector_search.py
data/: hardware_specs_raw.json  software_specs_raw.json
docs/: architecture.html
frontend/: INTEGRATION_GUIDE.md  index.html  scenario_modified_state_wireframe.html  scene_template_ui_mockup.html  select_ui_with_options_claude.html  sfp_selector_v5_fullwidth.html
frontend/css/: compare.css  feature-selector.css  style.css  table-view.css
frontend/data/: sfp_modules.json
frontend/js/: app.js  compare.js  config.js  scenes.js  (+2 more)
scratch/: analyze_rj45.py  check_vlan.py
scripts/: fetch_hardware_specs.py  fetch_sfp_modules.py  fetch_sw_specs.py  sw_index.py  sync_all.py  sync_specs_to_mongo.py  test_ds_quality.py  test_vector_search.py
