[project]
name = "advantech-ai-selection-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.2.25",
    "fastapi>=0.136.0",
    "flask>=3.1.3",
    "google-auth>=2.49.2",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "gspread>=6.2.1",
    "packaging>=26.1",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.0.0",
    "uvicorn>=0.44.0",
]
